# audio_devices

./: .gitignore  README.md  build.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels-cibuildwheel.yml  build-wheels.yml  cibuildwheel.yml
src/audio_devices/: __init__.py  _audio_devices.cpp  _audio_devices.m
