[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_devices"
dynamic = ["version"]
description = "Audio device enumeration library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "nohanaga", email = "your.email@example.com"}
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
write_to = "src/audio_devices/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
