[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_devices"
version = "0.2.0"
description = "Cross-platform audio device enumeration library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "nohanaga", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Hardware",
]
keywords = ["audio", "devices", "sound", "multimedia", "cross-platform"]

[project.urls]
Homepage = "https://github.com/nohanaga/audio_devices"
Repository = "https://github.com/nohanaga/audio_devices"
Issues = "https://github.com/nohanaga/audio_devices/issues"
Documentation = "https://github.com/nohanaga/audio_devices#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"


